--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -192,7 +192,7 @@ MMTAppReg2.MEMORYMAP.CoreName=Arm Cortex-M7
 MMTAppReg2.MEMORYMAP.DefaultDataRegion=true
 MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion
 MMTAppReg2.MEMORYMAP.Name=RAM
-MMTAppReg2.MEMORYMAP.Size=1048576
+MMTAppReg2.MEMORYMAP.Size=1032192
 MMTAppReg2.MEMORYMAP.StartAddress=0x24000000
 MMTAppReg3.MEMORYMAP.AppRegionName=ITCMRAM
 MMTAppReg3.MEMORYMAP.Cacheability=WTRA
@@ -215,7 +215,15 @@ MMTAppReg4.MEMORYMAP.Name=FLASH
 MMTAppReg4.MEMORYMAP.RootBootRegion=true
 MMTAppReg4.MEMORYMAP.Size=2097152
 MMTAppReg4.MEMORYMAP.StartAddress=0x08000000
-MMTAppRegionsCount=4
+MMTAppReg5.MEMORYMAP.AppRegionName=RAM_NONCACHEABLE
+MMTAppReg5.MEMORYMAP.Cacheability=NonCacheable
+MMTAppReg5.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg5.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg5.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
+MMTAppReg5.MEMORYMAP.Name=RAM_NONCACHEABLE
+MMTAppReg5.MEMORYMAP.Size=16384
+MMTAppReg5.MEMORYMAP.StartAddress=0x240FC000
+MMTAppRegionsCount=5
 MMTConfigApplied=false
 Mcu.CPN=STM32H7A3RIT6TR
 Mcu.Family=STM32H7
@@ -607,7 +615,7 @@ TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.IPParameters=Channel-PWM Generation1 CH1,Period,AutoReloadPreload,OCPolarity_1
 TIM15.OCPolarity_1=TIM_OCPOLARITY_LOW
-TIM15.Period=191
+TIM15.Period=349
 TIM17.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM17.IPParameters=AutoReloadPreload,Period,Prescaler
 TIM17.Period=24999
